fixed button visibility under logged in/logged out conditions

--- a/style.css
+++ b/style.css
@@ -4,6 +4,9 @@ body {
 }
 
 .container-fluid {
-    background-color: black;
-    width: 75%;
+    width: 35%;
+    margin: auto;
+}
+
+.btn-secondary {
 }
